--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,22 @@
 
+
 .app {
+    display: grid;
+    grid-template-rows: 60px 1fr;
+    grid-template-columns: 200px 1fr;
+    grid-template-areas:    "nav-bar nav-bar"
+                            "side-bar week";
     height: 100vh;
     min-width: 0;
 }
 
+@media only screen and (max-width: 800px) {
+    .app { grid-template-areas: "nav-bar nav-bar"
+                                "week week"     ;}
+}
+
 .week{
+    grid-area: week;
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     /* justify-items: stretch; */
@@ -31,10 +43,10 @@
 }
 
 .task {
-    box-sizing: initial;
+    overflow: hidden;
     display: grid;
     grid-template-columns: 66% 34%;
-/*     grid-template-rows:  1fr 3fr;*/
+    grid-template-rows:  auto 1fr;
     grid-template-areas:    "task-title task-time"
                             "task-description task-description";
     background-color: rgb(65, 140, 238);
@@ -42,6 +54,7 @@
     padding: 10px 10px 1px;
     border-radius: 2px;
     min-width: 0;
+    max-height: 6.4em;
 }
 
 #h5 .task {
@@ -50,6 +63,7 @@
 
 .taskTitle {
     text-shadow: rgba(0, 0, 0, 0.055) 1px 1px 1px;
+    overflow: hidden;                                                 /* !!!!! need to combine all of these!*/
     font-style: oblique;
     padding: 0em;
     margin: 0em;
@@ -60,6 +74,7 @@
 
 .task-time {
     text-shadow: rgba(0, 0, 0, 0.055) 1px 1px 1px;
+    overflow: hidden;   
     font-style: oblique;
     padding: 0.05em 0.4em;
     margin: 0em;
@@ -72,6 +87,7 @@
 .task-description{
     grid-area: task-description;
     font-size: 0.8em;
+    overflow: hidden;   
 }
 
 @media only screen and (max-width: 800px) {
@@ -90,8 +106,20 @@
     }
 }
 
+@media only screen and (max-width: 1100px) {
+    .task-time {
+        display: none;
+    }
+}
+
 .nav-bar {
+    grid-area: nav-bar;
     width: 100%;
     background-color: brown;
     display: inline-block;
+}
+
+.side-bar {
+    grid-area: side-bar;
+    background-color: khaki;
 }
