--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,11 @@
 
 .app {
     display: grid;
-    grid-template-rows: 60px 1fr;
+    grid-template-rows: 50px 1fr;
     grid-template-columns: 200px 1fr;
     grid-template-areas:    "nav-bar nav-bar"
                             "side-bar week";
-    height: 60vh;
+    height: 100vh;
     min-width: 0;
 }
 
@@ -24,8 +24,8 @@
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     /* justify-items: stretch; */
-    padding: calc(0.2vw + 2px) 5px;
-    background-color: rgb(205, 208, 224);
+    padding: calc(0.1vw + 1px) 5px;
+    background-color: rgb(255, 255, 255);
     height: 100%;
     min-width: 0;
 }
@@ -33,7 +33,7 @@
 .day {
     background-color: white;
     padding: 2px Calc(1px + 0.05vw) ;
-    border: gray 1px solid;
+    /* border: rgb(230, 230, 230) 1px solid; */
     height: 100%;
     /* margin: calc(0.1vw + 1px); */
     /* overflow: hidden; */ 
@@ -44,6 +44,7 @@
     padding: 5px 5px 0px;
     color: teal;
     min-width: 0;
+    text-align: center;
 }
 
 .task {
@@ -118,23 +119,15 @@
 
 .nav-bar {
     grid-area: nav-bar;
-    display: flex;
+    display: inline-block;
     justify-content: space-between;
     align-items: center;
-    background-color: brown;
+    background-color: rgb(58, 58, 58);
     padding: 0em;
 }
 
 .side-bar {
     grid-area: side-bar;
-    background-color: rgb(136, 125, 27);
+    background-color: rgb(214, 214, 214);
 }
 
-.a-a {
-    display: inline-block;
-    
-}
-.li {
-    display: inline-block;
-    width: 50px;
-}
