--- a/src/App.css
+++ b/src/App.css
@@ -15,8 +15,7 @@
 }
 
 @media only screen and (max-width: 800px) {
-    .app { grid-template-areas: "nav-bar nav-bar"
-                                "week week"     ;}
+    
 }
 
 .week{
@@ -42,9 +41,18 @@
 
 .dayTitle{
     padding: 5px 5px 0px;
-    color: teal;
+    color: rgb(255, 255, 255);
     min-width: 0;
     text-align: center;
+    background-color: rgb(77, 77, 77);
+    border-radius: 0.3em;
+    margin: 0 2em;
+    padding-bottom: 5px;
+    
+}
+
+.dayTitle p {
+    font-size: 0.8em;
 }
 
 .task {
@@ -56,10 +64,10 @@
                             "task-description task-description";
     background-color: rgb(65, 140, 238);
     margin: 5px 4px;
-    padding: 10px 10px 1px;
+    padding: 10px 10px 5px;
     border-radius: 2px;
     min-width: 0;
-    max-height: 6.4em;
+    max-height: Calc(5vh + 50px);
 }
 
 #h5 .task {
@@ -72,7 +80,6 @@
     font-style: oblique;
     padding: 0em;
     margin: 0em;
-    display: block;
     font-size: 1em;
     grid-area: task-title;
 }
@@ -96,6 +103,8 @@
 }
 
 @media only screen and (max-width: 800px) {
+    .app { grid-template-areas: "nav-bar nav-bar"
+        "week week"     ;}
     .task-description{ font-size: 0.7em;
                         }
     .task-time {display: none;}
@@ -109,6 +118,15 @@
         margin: 1px 0;
         padding: 0.4em 0.4em;
     }
+    .side-bar{
+        display: none;
+    }
+    .dayTitle {
+        font-size: 2.6vw;
+    }
+    .dayTitle p {
+        font-size: 2.2vw;
+    }
 }
 
 @media only screen and (max-width: 1100px) {
@@ -119,15 +137,20 @@
 
 .nav-bar {
     grid-area: nav-bar;
-    display: inline-block;
     justify-content: space-between;
     align-items: center;
     background-color: rgb(58, 58, 58);
     padding: 0em;
 }
 
+.nav-bar button, ul { display: inline-block;}
+
 .side-bar {
     grid-area: side-bar;
     background-color: rgb(214, 214, 214);
 }
 
+.menu-btn{
+    width: 50px;
+    height: 50px;
+}
