--- a/src/App.css
+++ b/src/App.css
@@ -153,4 +153,11 @@
 .menu-btn{
     width: 50px;
     height: 50px;
+
+}
+
+.date-select-drop {
+    padding: 5px 20px;
+    border-radius: 10px;
+    margin: 0 0 0 50px
 }
