--- a/src/App.css
+++ b/src/App.css
@@ -40,19 +40,17 @@
 }
 
 .dayTitle{
-    padding: 5px 5px 0px;
+    padding: 4px 5px 5px;
     color: rgb(255, 255, 255);
     min-width: 0;
     text-align: center;
     background-color: rgb(77, 77, 77);
-    border-radius: 0.3em;
-    margin: 0 2em;
-    padding-bottom: 5px;
-    
+    /* border-radius: 0.3em; */
+    margin: 5px 2px;    
 }
 
 .dayTitle p {
-    font-size: 0.8em;
+    font-size: 0.7em;
 }
 
 .task {
@@ -63,8 +61,8 @@
     grid-template-areas:    "task-title task-time"
                             "task-description task-description";
     background-color: rgb(65, 140, 238);
-    margin: 5px 4px;
-    padding: 10px 10px 5px;
+    margin: 5px 2px;
+    padding: 10px 10px 8px;
     border-radius: 2px;
     min-width: 0;
     max-height: Calc(5vh + 50px);
@@ -77,10 +75,10 @@
 .taskTitle {
     text-shadow: rgba(0, 0, 0, 0.055) 1px 1px 1px;
     overflow: hidden;                                                 /* !!!!! need to combine all of these!*/
-    font-style: oblique;
+    font-style: italic;
     padding: 0em;
     margin: 0em;
-    font-size: 1em;
+    font-size: 0.8em;
     grid-area: task-title;
 }
 
@@ -122,11 +120,10 @@
         display: none;
     }
     .dayTitle {
-        font-size: 2.6vw;
+        font-size: Calc(3 + 1.8vw);
+        margin: 1px 0;
     }
-    .dayTitle p {
-        font-size: 2.2vw;
-    }
+    
 }
 
 @media only screen and (max-width: 1100px) {
@@ -143,7 +140,7 @@
     padding: 0em;
 }
 
-.nav-bar button, ul { display: inline-block;}
+.nav-bar button { display: inline-block;}
 
 .side-bar {
     grid-area: side-bar;
