--- a/src/App.css
+++ b/src/App.css
@@ -162,35 +162,38 @@
 .task-form {
     position: absolute;
     display: grid;
-    grid-template-columns: 2fr 1fr 1fr;
-    grid-template-rows: 2fr 2fr 1fr;
+    grid-template-columns: 2fr 2fr 1fr;
+    grid-template-rows: 1fr 1fr 0.8fr 0.6fr;
     grid-template-areas:    "task-form-title task-form-title task-form-title"
                             "task-form-discription task-form-discription task-form-discription"
-                            "task-form-time task-form-submit task-form-cancel";
+                            "task-form-time . task-form-color"
+                            ". task-form-submit task-form-cancel";
     left: 400px;
     top: 200px;
-    background-color: rgb(195, 195, 195);
+    background-color: rgb(255, 255, 255);
     width: 250px;
-    height: 250px;
-    padding: 20px;
+    height: auto;
+    padding: 20px 20px 15px ;
+    border-radius: 15px;
 }
 .task-form * {
     border-style: none;
-    padding: 10px;
+    padding: 15px;
 }
 
 .task-form input {
-    margin: 0 0 5px;
-    padding: 10px;
+    margin: 0px 0 10px;
     width: 100%;
     display: inline-block;
-    border-style: none;
-    background-color: rgb(204, 204, 204);
+    border-bottom: rgb(0, 168, 28) 1px solid;
+    background: none;
     word-break: break-word;
+    text-align: center;
 }
 
 .task-form ::placeholder {
     color: rgb(93, 93, 93)5, 95, 95);
+    /* border-bottom: gray 1px solid; */
 }
 
 .task-form-title {
@@ -211,4 +214,10 @@
 .task-form-cancel {
     grid-area: task-form-cancel;
     background: none;
+}
+.task-form-color{
+    grid-area: task-form-color;
+    width: 100%;
+    height: 100%;
+    background-color: green;
 }
