--- a/src/App.css
+++ b/src/App.css
@@ -162,62 +162,59 @@
 .task-form {
     position: absolute;
     display: grid;
-    grid-template-columns: 2fr 2fr 1fr;
+    grid-template-columns: 2fr 2fr 0.8fr;
     grid-template-rows: 1fr 1fr 0.8fr 0.6fr;
     grid-template-areas:    "task-form-title task-form-title task-form-title"
                             "task-form-discription task-form-discription task-form-discription"
                             "task-form-time . task-form-color"
                             ". task-form-submit task-form-cancel";
-    left: 400px;
-    top: 200px;
+    left: Calc(50% - 170px);
+    top: Calc(50% - 200px);
     background-color: rgb(255, 255, 255);
-    width: 250px;
+    width: 330px;
     height: auto;
-    padding: 20px 20px 15px ;
-    border-radius: 15px;
+    min-height: 380px;
+    padding: 35px 30px 10px ;
+    animation: form-pop-in ease-out 0.2s  ;
 }
+
+@keyframes form-pop-in {
+    0% {    opacity: 0;
+            top: Calc(50% - 180px); }
+    100% {  opacity: 100%;
+            top: Calc(50% - 200px); }
+}
+
 .task-form * {
     border-style: none;
-    padding: 15px;
+    outline: none;
 }
 
 .task-form input {
-    margin: 0px 0 10px;
+    margin: 0px 0 15px;
     width: 100%;
     display: inline-block;
-    border-bottom: rgb(0, 168, 28) 1px solid;
+    border-bottom: rgb(197, 218, 199) 1px solid;
     background: none;
     word-break: break-word;
-    text-align: center;
+    
 }
 
 .task-form ::placeholder {
-    color: rgb(93, 93, 93)5, 95, 95);
+    color: rgb(93, 93, 93);
+    vertical-align: bottom;
+    display: inline-block;
     /* border-bottom: gray 1px solid; */
 }
 
-.task-form-title {
-    grid-area: task-form-title;
-}
-.task-form-discription {
-    grid-area: task-form-discription;
-}
-
-.task-form-time {
-    grid-area: task-form-time;
-}
-
-.task-form-submit {
-    grid-area: task-form-submit ;
-    background: none;
-}
-.task-form-cancel {
-    grid-area: task-form-cancel;
-    background: none;
-}
+.task-form-title { grid-area: task-form-title;}
+.task-form-discription { grid-area: task-form-discription;}
+.task-form-time { grid-area: task-form-time;}
+.task-form-submit {grid-area: task-form-submit; background: none; color: rgb(26, 110, 71);}
+.task-form-cancel {grid-area: task-form-cancel; background: none; color: rgb(116, 16, 46)}
 .task-form-color{
     grid-area: task-form-color;
-    width: 100%;
-    height: 100%;
-    background-color: green;
+    width: 5px;
+    height: 40px;
+    overflow: hidden;
 }
