--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 .app {
     display: grid;
-    grid-template-rows: 50px 1fr;
+    grid-template-rows: 60px 1fr;
     grid-template-columns: 200px 1fr;
     grid-template-areas:    "nav-bar nav-bar"
                             "side-bar week";
@@ -30,9 +30,9 @@
 }
 
 .day {
-    background-color: rgb(221, 221, 221);
+    background-color: rgb(255, 255, 255);
     padding: 2px Calc(1px + 0.05vw) ;
-    /* border: rgb(230, 230, 230) 1px solid; */
+    border-left: rgb(230, 230, 230) 1px solid;
     height: 100%;
     /* margin: calc(0.1vw + 1px); */
     /* overflow: hidden; */ 
@@ -40,17 +40,20 @@
 }
 
 .dayTitle{
-    padding: 4px 5px 5px;
-    color: rgb(255, 255, 255);
+    padding: 5px Calc(1.5vw + 5px) 5px;
+    color: rgb(83, 88, 95);
     min-width: 0;
     text-align: center;
-    background-color: rgb(77, 77, 77);
-    /* border-radius: 0.3em; */
-    margin: 5px 2px;    
+    background-color: rgb(255, 255, 255);
+    /* border: rgb(230, 230, 230) 1px solid;
+    border-right: none;
+    border-left: none; */
+    border: none;
+    font-size: 1.1em;
 }
 
 .dayTitle p {
-    font-size: 0.7em;
+    font-size: 0.8em;
 }
 
 .task {
@@ -60,10 +63,15 @@
     grid-template-rows:  auto 1fr;
     grid-template-areas:    "task-title task-time"
                             "task-description task-description";
-    background-color: rgb(65, 140, 238);
-    margin: 5px 2px;
+    margin: 5px 5px;
     padding: 10px 10px 8px;
-    border-radius: 2px;
+    border: rgb(228, 228, 238) 1px solid;
+    /* border-top: rgb(73, 73, 167) 2px solid; */
+    /* box-shadow: inset 0px 50px 0px rgba(185, 185, 214, 0.459); */
+    border-left: none;
+    border-right: none;
+    border-bottom: none;
+    /* border-top:none; */
     min-width: 0;
     max-height: Calc(5vh + 50px);
 }
@@ -76,10 +84,13 @@
     text-shadow: rgba(0, 0, 0, 0.055) 1px 1px 1px;
     overflow: hidden;                                                 /* !!!!! need to combine all of these!*/
     font-style: italic;
-    padding: 0em;
+    padding: 0 0 0 8px;
     margin: 0em;
     font-size: 0.8em;
     grid-area: task-title;
+    color: rgb(39, 39, 201);
+    border-left: blue 3px solid;
+    /* background-color: rgb(208, 208, 233); */
 }
 
 .task-time {
@@ -97,10 +108,58 @@
 .task-description{
     grid-area: task-description;
     font-size: 0.8em;
-    overflow: hidden;   
+    
+    overflow: hidden;
+    
 }
 
-@media only screen and (max-width: 800px) {
+.nav-bar {
+    grid-area: nav-bar;
+    align-items: center;
+    background-color: rgb(255, 255, 255);
+    /* padding: 7px 0 4px; */
+    border-bottom: rgb(209, 209, 209) 1px solid;
+    /* margin: 0 0 10px 0; */
+}
+
+.nav-bar h1 {
+    font-size: 2.2em;
+    color: rgb(150, 223, 186);
+    color: #2C3D4F;
+    background-color: #EDB19F;
+    display: inline-block;
+    margin: 5px 0 0 20px;
+    padding: 2px 0 2px 15px;
+}
+
+.side-bar {
+    margin: 20px 0 0 0;
+    grid-area: side-bar;
+    background-color: rgb(255, 255, 255);
+}
+
+.menu-btn{
+    width: 45px;
+    height: 45px;
+    border: rgb(221, 221, 221) 1px solid;
+    border-radius: 30px;
+    margin: 0 0 5px 10px;
+    background-color: white;
+    font-size: 1.5em;
+}
+
+.date-select-drop {
+    padding: 0 20px;
+    margin: 0 0 0 28px;
+    border: rgb(230, 230, 230) 1px solid;
+    border-top: none;
+    border-bottom: none;
+    background-color: white;
+    height: 80%;
+}
+
+
+@media only screen and (max-width: 900px) {
     .app { grid-template-areas: "nav-bar nav-bar"
         "week week"     ;}
     .task-description{ font-size: 0.7em;
@@ -123,6 +182,15 @@
         font-size: Calc(3 + 1.8vw);
         margin: 1px 0;
     }
+    .menu-btn{
+        /* background-color: #C87660;
+        color: white; */
+        border: #2C3D4F 2px solid;
+    }
+    .nav-bar h1 {
+        font-size: 1em;
+        margin: 22px 0 0 0;
+    }
 
 }
 
@@ -132,32 +200,6 @@
     }
 }
 
-.nav-bar {
-    grid-area: nav-bar;
-    justify-content: space-between;
-    align-items: center;
-    background-color: rgb(58, 58, 58);
-    padding: 0em;
-}
-
-.nav-bar button { display: inline-block;}
-
-.side-bar {
-    grid-area: side-bar;
-    background-color: rgb(214, 214, 214);
-}
-
-.menu-btn{
-    width: 50px;
-    height: 50px;
-
-}
-
-.date-select-drop {
-    padding: 5px 20px;
-    border-radius: 10px;
-    margin: 0 0 0 50px
-}
 
 .task-form {
     position: absolute;
