--- a/src/App.css
+++ b/src/App.css
@@ -31,12 +31,13 @@
 
 .day {
     background-color: rgb(255, 255, 255);
-    padding: 2px Calc(1px + 0.05vw) ;
+    /* padding: 2px Calc(1px + 0.05vw) ; */
     border-left: rgb(230, 230, 230) 1px solid;
     height: 100%;
     /* margin: calc(0.1vw + 1px); */
     /* overflow: hidden; */ 
     min-width: 0;
+    position: relative;
 }
 
 .dayTitle{
@@ -56,6 +57,27 @@
     font-size: 0.8em;
 }
 
+.time-ruler {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-between; */
+    height: 100%;
+    width: 100%;
+    top: 55px;
+    
+    z-index: 5;
+}
+
+.time-ruler p {
+    /* border-bottom: rgb(224, 224, 224) 1px solid; */
+    height: 50px;
+    font-size: 12px;
+    text-align: right;    
+    color: rgb(172, 172, 172);
+    /* background-color: white; */
+}
+
 .task {
     overflow: hidden;
     display: grid;
@@ -63,17 +85,18 @@
     grid-template-rows:  auto 1fr;
     grid-template-areas:    "task-title task-time"
                             "task-description task-description";
-    margin: 5px 5px;
+    /* margin: 5px 5px; */
     padding: 10px 10px 8px;
-    border: rgb(228, 228, 238) 1px solid;
+    
     /* border-top: rgb(73, 73, 167) 2px solid; */
     /* box-shadow: inset 0px 50px 0px rgba(185, 185, 214, 0.459); */
-    border-left: none;
-    border-right: none;
-    border-bottom: none;
+    border-top: rgb(228, 228, 238) 1px solid;
     /* border-top:none; */
     min-width: 0;
     max-height: Calc(5vh + 50px);
+    background-color: white;
+    position: relative;
+    z-index: 10;
 }
 
 #h5 .task {
@@ -85,7 +108,7 @@
     overflow: hidden;                                                 /* !!!!! need to combine all of these!*/
     font-style: italic;
     padding: 0 0 0 8px;
-    margin: 0em;
+    margin: 0 0 3px 0;
     font-size: 0.8em;
     grid-area: task-title;
     color: rgb(39, 39, 201);
@@ -108,9 +131,7 @@
 .task-description{
     grid-area: task-description;
     font-size: 0.8em;
-    
     overflow: hidden;
-    
 }
 
 .nav-bar {
@@ -218,6 +239,7 @@
     min-height: 380px;
     padding: 35px 30px 10px ;
     animation: form-pop-in ease-out 0.2s  ;
+    z-index: 15;
 }
 
 @keyframes form-pop-in {
