--- a/src/App.css
+++ b/src/App.css
@@ -153,11 +153,6 @@
     padding: 2px 0 2px 15px;
 }
 
-.side-bar {
-    margin: 20px 0 0 0;
-    grid-area: side-bar;
-    background-color: rgb(255, 255, 255);
-}
 
 .menu-btn{
     width: 45px;
@@ -221,9 +216,22 @@
     }
 }
 
-
 .task-form {
     position: absolute;
+    left: Calc(50% - 170px);
+    top: Calc(50% - 200px);
+    animation: form-pop-in ease-out 0.2s  ;
+    z-index: 15;
+    
+    background-color: rgb(255, 255, 255);
+    width: 350px;
+    height: auto;
+    min-height: 400px;
+    padding: 35px 30px 10px ;
+    border: rgb(221, 221, 221) 1px solid;
+    border-radius: 0 0 10px 10px;
+    box-shadow: rgba(0, 0, 0, 0.075) 15px 15px ;
+    
     display: grid;
     grid-template-columns: 2fr 2fr 0.8fr;
     grid-template-rows: 1fr 1fr 0.8fr 0.6fr;
@@ -231,15 +239,7 @@
                             "task-form-discription task-form-discription task-form-discription"
                             "task-form-time . task-form-color"
                             ". task-form-submit task-form-cancel";
-    left: Calc(50% - 170px);
-    top: Calc(50% - 200px);
-    background-color: rgb(255, 255, 255);
-    width: 330px;
-    height: auto;
-    min-height: 380px;
-    padding: 35px 30px 10px ;
-    animation: form-pop-in ease-out 0.2s  ;
-    z-index: 15;
+    
 }
 
 @keyframes form-pop-in {
@@ -261,7 +261,6 @@
     border-bottom: rgb(197, 218, 199) 1px solid;
     background: none;
     word-break: break-word;
-    
 }
 
 .task-form ::placeholder {
@@ -269,6 +268,24 @@
     vertical-align: bottom;
     display: inline-block;
     /* border-bottom: gray 1px solid; */
+}
+
+.color-picker {
+    position: absolute;
+    top:380px;
+    width: 300px;
+    height: 200px;
+    background-color: white;
+    border: rgb(221, 221, 221) 1px solid;
+    border-radius: 15px;
+    z-index: 20;
+}
+
+.color-select-btn{
+    width: 25px;
+    height: 25px;
+    border: rgb(221, 221, 221) 1px solid;
+    border-radius: 40px;
 }
 
 .task-form-title { grid-area: task-form-title;}
@@ -282,3 +299,18 @@
     height: 40px;
     overflow: hidden;
 }
+
+
+.side-bar {
+    margin: 20px 0 0 0;
+    grid-area: side-bar;
+    background-color: rgb(255, 255, 255);
+}
+
+.side-cal-item {
+    margin: 0;
+    padding: 0;
+    color: indigo;
+    background-color: khaki;   
+}
+
