--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 .app {
     display: grid;
     grid-template-rows: 65px 1fr;
-    grid-template-columns: 200px 1fr;
+    grid-template-columns: 220px 1fr;
     grid-template-areas:    "nav-bar nav-bar"
                             "side-bar week";
     height: 100vh;
@@ -63,19 +63,20 @@
     flex-direction: column;
     /* justify-content: space-between; */
     height: 100%;
-    width: 100%;
     top: 55px;
-    
     z-index: 5;
+    width: 100%;
 }
 
-.time-ruler p {
-    /* border-bottom: rgb(224, 224, 224) 1px solid; */
-    height: 50px;
+.time-ruler div {
+    padding: 2px 5px;
+    height: 60px;
     font-size: 12px;
     text-align: right;    
-    color: rgb(172, 172, 172);
-    /* background-color: white; */
+    color: rgb(167, 167, 167);
+    text-align: right;
+    border-bottom: rgb(248, 248, 248) 1px solid;
+    opacity: 0;
 }
 
 .task {
@@ -87,8 +88,8 @@
                             "task-description task-description";
     margin: 0 0 2px 0;
     padding: 10px 10px 8px;
-    border-top: rgb(228, 228, 238) 1px solid;
-    border-bottom: rgb(228, 228, 238) 1px solid;
+    border-top: rgb(241, 241, 245) 1px solid;
+    /* border-bottom: rgb(241, 241, 241) 1px solid; */
     /* border-top:none; */
     min-width: 0;
     max-height: Calc(5vh + 50px);
@@ -137,7 +138,6 @@
     align-items: center;
     background-color: rgb(255, 255, 255);
     border-bottom: rgb(233, 233, 233) 1px solid;
-    margin: 0 0 5px 0;
 }
 
 .nav-bar h1 {
@@ -147,7 +147,7 @@
     background-color: #EDB19F;
     display: inline-block;
     margin: 5px 0 0 20px;
-    padding: 2px 0 2px 15px;
+    /* padding: 2px 0 2px 15px; */
 }
 
 
@@ -162,13 +162,20 @@
 }
 
 .date-select-drop {
-    padding: 0 20px;
-    margin: 0 0 0 28px;
-    border: rgb(230, 230, 230) 1px solid;
-    border-top: none;
+    padding: 0 20px 2px;
+    margin: 0 0 0 27px;
+    border: rgb(228, 228, 228) 1px solid;
+    border-radius: 4px;
+    /* border-top: none;
     border-bottom: none;
-    background-color: white;
-    height: 80%;
+    border-left: none; */
+    background-color: rgb(255, 255, 255);
+    box-shadow: inset rgba(0, 0, 0, 0.034) 3px -3px 5px ;
+    height: 50%;
+    vertical-align: 2px;
+}
+.date-select-drop h4 {
+    background-color: rgb(116, 16, 46);
 }
 
 
@@ -215,26 +222,27 @@
 
 .task-form {
     position: absolute;
-    left: Calc(50% - 170px);
+    left: Calc(50% - 160px);
     top: Calc(50% - 200px);
     animation: form-pop-in ease-out 0.2s  ;
     z-index: 15;
     
     background-color: rgb(255, 255, 255);
-    width: 350px;
+    width: 320px;
     height: auto;
     min-height: 400px;
-    padding: 35px 30px 10px ;
-    border: rgb(221, 221, 221) 1px solid;
-    border-radius: 20px;
-    box-shadow: rgba(0, 0, 0, 0.075) 15px 15px ;
+    padding: 50px 30px 10px ;
+    border-top: rgb(240, 240, 240) 1px solid;
+    /* border: none; */
+    border-radius: 2px;
+    box-shadow: rgba(0, 0, 0, 0.075) 2px 2px 15px;
     
     display: grid;
-    grid-template-columns: 2fr 2fr 0.8fr;
+    grid-template-columns: 1fr 2fr 0.8fr;
     grid-template-rows: 1fr 1fr 0.8fr 0.6fr;
     grid-template-areas:    "task-form-title task-form-title task-form-title"
                             "task-form-discription task-form-discription task-form-discription"
-                            "task-form-time . task-form-color"
+                            "task-form-time task-form-color task-form-color"
                             ". task-form-submit task-form-cancel";
     
 }
@@ -253,15 +261,17 @@
 
 .task-form input {
     margin: 0px 0 15px;
+    padding: 30px 0 0 10px;
     width: 100%;
     display: inline-block;
     border-bottom: rgb(197, 218, 199) 1px solid;
-    background: none;
+    /* background: none; */
+    background-color: white;
     word-break: break-word;
 }
 
 .task-form ::placeholder {
-    color: rgb(93, 93, 93);
+    color: rgb(182, 182, 182);
     vertical-align: bottom;
     display: inline-block;
     /* border-bottom: gray 1px solid; */
@@ -272,12 +282,12 @@
     display: grid;
     grid-template-columns: repeat(5, auto);
     grid-template-rows: repeat(6, auto);
-    top: 30px;
-    left: 30px;
+    top: 26px;
+    left: 18px;
     padding: 5px;
     background-color: white;
-    border: rgb(221, 221, 221) 1px solid;
-    border-radius: 15px;
+    /* border: rgb(221, 221, 221) 1px solid; */
+    border: none;
     z-index: 20;
     animation: color-picker-pop-in ease-out 0.2s;
 }
@@ -303,14 +313,17 @@
 .task-form-cancel {grid-area: task-form-cancel; background: none; color: rgb(116, 16, 46)}
 .task-form-color{
     grid-area: task-form-color;
-    width: 30px;
-    height: 30px;
-    border-radius: 40px;
+    width: 100px;
+    height: 40px;
+    text-align: center;
+    padding: 10px 0 0 0;
+    margin: 26px 0 0 54px;
+    color: white;
+    
 }
 
 
 .side-bar {
-    margin: 20px 0 0 0;
     grid-area: side-bar;
     background-color: rgb(255, 255, 255);
 }
@@ -322,3 +335,36 @@
     background-color: khaki;   
 }
 
+.react-calendar {
+    border: none;
+    padding: 5px 10px;
+    font-size: 0.9em;
+}
+.react-calendar button {
+    background-color: white;
+    border: none;
+    color: gray;
+    padding: 5px 0px;
+    margin: 2px 0;
+}
+
+.react-calendar__navigation {
+    padding: 0 20px;
+}
+
+.react-calendar__navigation button{
+    border-radius: 20px;
+    padding: 5px 5px 10px;
+}
+
+.react-calendar__month-view__weekdays {
+    padding: 5px 0;
+    text-align: center;
+}
+
+.react-calendar__month-view__weekdays__weekday abbr[title]{
+    font-size: 0.8em;
+    text-decoration-line: none;
+    color: gray;
+    border: none;
+}
