--- a/src/App.css
+++ b/src/App.css
@@ -148,6 +148,14 @@
     overflow: hidden;
 }
 
+.timeToolTip {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    z-index: 20;
+    pointer-events: none;
+}
+
 .nav-bar {
     grid-area: nav-bar;
     align-items: center;
