--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@
 }
 
 .day {
-    background-color: rgb(255, 255, 255);
+    background-color: white;
     /* padding: 2px Calc(1px + 0.05vw) ; */
     border-left: rgb(246, 246, 246) 1px solid;
     height: 100%;
@@ -101,15 +101,16 @@
     grid-template-rows:  auto 1fr;
     grid-template-areas:    "task-title task-time"
                             "task-description task-description";
-    margin: 0 0 2px 0;
-    padding: 10px 10px 8px;
+    /* margin: 0 0 2px 0; */
+    /* padding: 10px 10px 8px; */
     border-top: rgb(241, 241, 245) 1px solid;
+    width: 100%;
     /* border-bottom: rgb(241, 241, 241) 1px solid; */
     /* border-top:none; */
     min-width: 0;
-    max-height: Calc(5vh + 50px);
-    background-color: white;
-    position: relative;
+    /* max-height: Calc(5vh + 50px); */
+    background-color: rgb(245, 246, 246);
+    position: absolute;
     z-index: 10;
 }
 
@@ -121,7 +122,7 @@
     text-shadow: rgba(0, 0, 0, 0.055) 1px 1px 1px;
     overflow: hidden;                                                 /* !!!!! need to combine all of these!*/
     font-style: italic;
-    padding: 0 0 0 8px;
+    padding: 3px 0 0 8px;
     margin: 0 0 3px 0;
     font-size: 0.8em;
     grid-area: task-title;
@@ -134,10 +135,10 @@
     text-shadow: rgba(0, 0, 0, 0.055) 1px 1px 1px;
     overflow: hidden;   
     font-style: oblique;
-    padding: 0.05em 0.4em;
-    margin: 0em;
+    padding: 0.5px 1em;
+    margin: 3px;
     display: block;
-    font-size: 0.8em;
+    font-size: 0.75em;
     text-align: right;
     grid-area: task-time;
 }
@@ -146,14 +147,20 @@
     grid-area: task-description;
     font-size: 0.8em;
     overflow: hidden;
+    padding: 0 0 0 8px;
 }
 
 .timeToolTip {
     position: absolute;
-    width: 60px;
+    width: 11.5vw;
     height: 60px;
     z-index: 20;
     pointer-events: none;
+    padding: 0.2em 0.3em;
+    border-top: rgb(223, 223, 223) 1px solid;
+    text-align: center;
+    color: rgb(118, 131, 136);
+    font-size: 0.9em;
 }
 
 .nav-bar {
