--- a/src/App.css
+++ b/src/App.css
@@ -152,7 +152,7 @@
 
 .timeToolTip {
     position: absolute;
-    width: 11.5vw;
+    width: 100%;
     height: 60px;
     z-index: 20;
     pointer-events: none;
