--- a/src/App.css
+++ b/src/App.css
@@ -255,7 +255,7 @@
 
 .task-form {
     position: absolute;
-    left: Calc(50% - 160px);
+    left: Calc(50% - 200px);
     top: Calc(50% - 200px);
     animation: form-pop-in ease-out 0.2s  ;
     z-index: 100;
@@ -271,12 +271,13 @@
     box-shadow: rgba(0, 0, 0, 0.034) 2px 2px 15px;
     
     display: grid;
-    grid-template-columns: 1fr 2fr 0.8fr;
-    grid-template-rows: 1fr 1fr 0.8fr 0.6fr;
-    grid-template-areas:    "task-form-title task-form-title task-form-title"
+    grid-template-columns: 3fr 3fr 0.8fr;
+    grid-template-rows: 0.6fr 0.6fr 0.3fr 0.3fr 0.5fr;
+    grid-template-areas:    "task-form-title       task-form-title       task-form-title"
                             "task-form-discription task-form-discription task-form-discription"
-                            "task-form-time task-form-color task-form-color"
-                            ". task-form-submit task-form-cancel";
+                            "task-form-time-lable  task-form-time        task-form-color"
+                            "task-form-end-lable   task-form-time-end    task-form-color"
+                            "task-form-cancel      .                     task-form-submit";
     
 }
 
@@ -293,11 +294,8 @@
 }
 
 .task-form input {
-    margin: 0px 0 15px;
-    padding: 30px 0 0 10px;
-    width: 100%;
+    /* margin: 0px 0 15px; */
     display: inline-block;
-    border-bottom: rgb(197, 218, 199) 1px solid;
     /* background: none; */
     background-color: white;
     word-break: break-word;
@@ -347,19 +345,32 @@
                          border-left: 1px solid;
                          padding: 15px;
                          margin: 5px 0 0 0}
-.task-form-time { grid-area: task-form-time;}
+.task-form-time-lable { grid-area: task-form-time-lable;
+                        padding: 15px 5px;}
+.task-form-time {grid-area: task-form-time;
+                padding: 0 0 0 20px;}
+.task-form-end-lable {grid-area: task-form-end-lable;
+                      padding: 15px 5px;
+                      width: 75px;
+                    }
+.task-form-time-end { grid-area: task-form-time-end;
+                      padding: 0 0 0 20px;}
 .task-form-submit {grid-area: task-form-submit; background: none; color: rgb(26, 110, 71);}
 .task-form-cancel {grid-area: task-form-cancel; background: none; color: rgb(116, 16, 46)}
 .task-form-color{
     grid-area: task-form-color;
-    width: 100px;
+    font-size: 1em;
+    width: 40px;
     height: 40px;
     text-align: center;
-    padding: 10px 0 0 0;
-    margin: 26px 0px 0 54px;
+    padding: 10px 1px 0 0;
+    /* margin: 26px 0px 0 20px; */
+    /* margin: 26px 0 0 0; */
+    /* margin: 30px 20px 50px 30px; */
+    border-radius: 30px;
     color: white;
-    
 }
+
 
 
 .side-bar {
