--- a/src/App.css
+++ b/src/App.css
@@ -106,6 +106,7 @@
     /* padding: 10px 10px 8px; */
     border-top: rgb(241, 241, 245) 1px solid;
     width: 100%;
+    cursor: pointer;
     /* border-bottom: rgb(241, 241, 241) 1px solid; */
     /* border-top:none; */
     min-width: 0;
@@ -153,7 +154,7 @@
     position: absolute;
     width: 100%;
     height: 60px;
-    z-index: 20;
+    z-index: 5;
     pointer-events: none;
     padding: 0.2em 0.3em;
     border-top: rgb(223, 223, 223) 1px solid;
@@ -316,6 +317,7 @@
     border: none;
     z-index: 20;
     animation: color-picker-pop-in ease-out 0.2s;
+    cursor: pointer;
 }
 
 .color-select-btn{
@@ -350,8 +352,8 @@
                     }
 .task-form-time-end { grid-area: task-form-time-end;
                       padding: 0 0 0 20px;}
-.task-form-submit {grid-area: task-form-submit; background: none; color: rgb(26, 110, 71);}
-.task-form-cancel {grid-area: task-form-cancel; background: none; color: rgb(116, 16, 46)}
+.task-form-submit {grid-area: task-form-submit; background: none; color: rgb(26, 110, 71); cursor: pointer;}
+.task-form-cancel {grid-area: task-form-cancel; background: none; color: rgb(116, 16, 46); cursor: pointer;}
 .task-form-color{
     grid-area: task-form-color;
     font-size: 1em;
@@ -364,6 +366,7 @@
     /* margin: 30px 20px 50px 30px; */
     border-radius: 30px;
     color: white;
+    cursor: pointer;
 }
 
 
