--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,7 @@
     /* overflow: hidden; */ 
     min-width: 0;
     position: relative;
+    cursor: cell;
 }
 
 .dayTitle{
@@ -106,7 +107,7 @@
     /* padding: 10px 10px 8px; */
     border-top: rgb(241, 241, 245) 1px solid;
     width: 100%;
-    cursor: pointer;
+    cursor: default;
     /* border-bottom: rgb(241, 241, 241) 1px solid; */
     /* border-top:none; */
     min-width: 0;
